fixing issue where text was getting hidden behind an image on the about page

--- a/wp-content/themes/ima/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/ima/assets/styles/layouts/_pages.scss
@@ -82,6 +82,10 @@
   .about-item {
     color: $color-white;
     position: relative;
+    min-height: 400px;
+    @include bp(s) {
+      min-height: auto;
+    }
     img {
       position: absolute;
       bottom: 0;
